# libbsc

./: README.md  makefile  meson.build
cross/: riscv64-linux-gnu.txt
subprojects/libbsc/: meson.build
